Backend ready for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,8 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/fitnessTracker
-JWT_SECRET=my_super_secret_123
+
+MONGO_URI=mongodb+srv://thamaraikabilan712712_db_user:kabilan2005@cluster0.uvy6oq7.mongodb.net/fitflowDB?retryWrites=true&w=majority
+
+JWT_SECRET=fitflow_secret_key
+
 GOOGLE_CLIENT_ID=164444498134-p8jtt6u8e31lsgs7aih8lopi69pishdp.apps.googleusercontent.com
 GEMINI_API_KEY=AIzaSyC0hpbZBFtWDseqopB1d4e2A7X_fVvjPV8
